hphp/hack/test/typecheck/reactive/test_rx_enabled1.php.exp
File "test_rx_enabled1.php", line 4, characters 7-22:
\HH\Rx\IS_ENABLED can only be used in reactive functions. (Typing[4220])
